# scientific-paper-chat-rag

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_with_ngrok.py  setup_tunnel.py
data/memory/: .gitkeep
data/vectorstore/: .gitkeep
src/: __init__.py  config.py  memory_model.py  ollama_client.py  rag_classes.py  utils.py
