[project]
name = "scientific-paper-chat-rag"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) application for academic PDF analysis using Streamlit, LangGraph, and Ollama with MemoRAG support"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "StadynR" }
]
keywords = ["rag", "pdf", "academic", "chatbot", "ollama", "streamlit", "langgraph", "memorag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "chromadb==0.4.22",
    "langchain==0.1.0",
    "langchain-community==0.0.10",
    "langgraph==0.0.20",
    "ollama==0.1.6",
    "pymupdf==1.23.8",
    "pyngrok==7.0.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "streamlit==1.29.0",
    "tiktoken==0.5.2",
]

[project.urls]
Homepage = "https://github.com/StadynR/scientific-paper-chat-rag"
Repository = "https://github.com/StadynR/scientific-paper-chat-rag"
Issues = "https://github.com/StadynR/scientific-paper-chat-rag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
